2005-03-17  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>): Use importLocation.

	* ELisp.java (createReadTable): New method.
	* ELispReader.java (getReadTable): Remove method.
	(createReadTable): New static method.

2005-02-24  Per Bothner  <per@bothner.com>

	* ELisp.java (registerEnvironment): Use new setDefaults method.
	(getInstance): Simplify - so we avoid a NulPointerException.

2005-02-12  Per Bothner  <per@bothner.com>

	* defcustom.java: Use SetExp's setBinding method.

2005-01-29  Per Bothner  <per@bothner.com>

	* ELisp.java: Update LispInterpreter -> LispLanguage.

2004-12-20  Per Bothner  <per@bothner.com>

	* ELisp.java: Update 'quote' to use Quote.plainQuote.

2004-12-05  Per Bothner  <per@bothner.com>

	* ELisp.java: Update for new Symbol/Location handling.
	(defun): Remove method - use new methods in Lisp2 instead,
	(defineFormFieldValue): Remove - no longer need to override.
	* lambda.java (rewriteBody): Do setIndirectBinding.

2004-11-16  Per Bothner  <per@bothner.com>

	* ELisp.java (ELisp): Add defun for '%let'.  Use defProcStFld.

2004-11-10  Per Bothner  <per@bothner.com>

	* ELisp.java (ELisp): Remove definitions of 'and' and 'or'.
	Instead used definitions in kawa.lib.std_syntax.

2004-11-06  Per Bothner  <per@bothner.com>

	* MiscOps.scm (if): Define elisp-specific macro.
	* ELisp.java (<init>): Remove old definition of 'if'.

2004-09-12  Per Bothner  <per@bothner.com>

	* ELisp.java (<init>): ELisp 'if' syntax allows multiple-statement
	else part.

2004-07-20  Per Bothner  <per@bothner.com>

	* ELisp.java:  Use static syntax to access static fields/methods.
	* defcustom.java:  Likewise.
	* SaveExcursion.java:  Remove unused import statements.

2004-02-15  Per Bothner  <per@bothner.com>

	* lambda.java (rewriteBody):  Now need to rewrite default args here.

2004-01-09  Per Bothner  <per@bothner.com>

	* ELisp.java (registerEnvironment):  Update setCurrent to setGlobal.

2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>
